--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -35,6 +35,13 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="comboboxhl">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Combo Box HL
+            </NavLink>
+        </li>
+
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="contextmenu">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Context Menu
             </NavLink>
