Bug fixed. Invoke change event when month changed

--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -167,6 +167,7 @@
                             <td>
                                 <BbDatePicker DropdownPosition="DropdownPositions.Fixed"
                                               Size="BootstrapElementSizes.Sm"
+                                              Format="dd.MM.yyyy HH:mm:ss"
                                               @bind-Value="@row.Period"></BbDatePicker>
                             </td>
                             <td>
