Close DatePicker when click outside

--- a/src/BBComponents/Components/BbDatePicker.razor
+++ b/src/BBComponents/Components/BbDatePicker.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="input-group @SizeClass bb-date-picker @HtmlClass" style="@HtmlStyle">
+<div id="@_inputGroupKey" class="input-group @SizeClass bb-date-picker @HtmlClass" style="@HtmlStyle">
     <input @ref=_inputElementReference
            id="@Id"
            class="form-control" type="text"
