--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -66,6 +66,11 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listtests">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> List tests
+            </NavLink>
+        </li>
 
 
         <li class="nav-item px-3">
@@ -87,4 +92,5 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
 }
