--- a/test/BlazorServerSideForDebug/Shared/NavMenu.razor
+++ b/test/BlazorServerSideForDebug/Shared/NavMenu.razor
@@ -54,6 +54,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="autocomplete">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Auto complete
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="textarea">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Text area
             </NavLink>
