--- a/test/BlazorServerSideForDebug/Pages/ContextMenuTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ContextMenuTests.razor
@@ -4,6 +4,14 @@
 <h3>ContextMenuTests</h3>
 
 <div class="row">
+    <div class="col-sm-6">
+        <BbCheckBox @bind-Value="_disableGeometryCalculations"></BbCheckBox>
+        <label>Disable geometry calculations</label>
+    </div>
+</div>
+
+
+<div class="row">
 
     <div class="col-sm-6" style="border: 1px solid #ececec; height: 50px;"
          @oncontextmenu:preventDefault
@@ -85,5 +93,9 @@
 
 @if (_isCustomMenuOpen)
 {
-<BbContextMenu ClientX="_clientX" ClientY="_clientY" Items="_menuItems" Closed="OnContextMenuClosed"></BbContextMenu>
+    <BbContextMenu ClientX="_clientX" 
+                   ClientY="_clientY" 
+                   Items="_menuItems"
+                   DisableGeometryCalculations="@_disableGeometryCalculations"
+                   Closed="OnContextMenuClosed"></BbContextMenu>
 }
