--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -194,7 +194,8 @@
     <div class="col-sm-6">
 
         <button class="btn btn-sm btn-outline-dark" @onclick="OnTestClick">Test</button>
-
+        <button class="btn btn-sm btn-outline-primary" @onclick="OnClearValueClick">Clear value 2</button>
+        
     </div>
 </div>
 
