Check set value for combobox

--- a/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
+++ b/test/BlazorServerSideForDebug/Pages/ComboBoxTests.razor
@@ -195,7 +195,7 @@
 
         <button class="btn btn-sm btn-outline-dark" @onclick="OnTestClick">Test</button>
         <button class="btn btn-sm btn-outline-primary" @onclick="OnClearValueClick">Clear value 2</button>
-        
+         <button class="btn btn-sm btn-outline-primary" @onclick="OnSetValueClick">Set value 2</button>
     </div>
 </div>
 
