--- a/src/BBComponents/Components/BbTextInput.razor
+++ b/src/BBComponents/Components/BbTextInput.razor
@@ -10,6 +10,7 @@
        title="@Tooltip"
        placeholder="@Placeholder"
        value="@_value"
+@onkeydown="(e=> OnKeyDown(e))"
        @onchange="(e => OnValueChange(e))" />
 
 @if (_showMaskDescription && !string.IsNullOrEmpty(MaskDescription))
